fixed full screen line numbering problem. The labels needed to be wrapped inside a div.

--- a/css/editor.css
+++ b/css/editor.css
@@ -22,6 +22,7 @@ textarea, .form-control {
 }*/
 
 #line-nums {
+	float: right;
 	padding-left: 2.5em;
 	display: block;
 }
